--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
  }
 
 
-h4, h3, h2 {
+h5, h4, h3, h2 {
    color:gray;
 }
 
@@ -38,7 +38,7 @@ h4, h3, h2 {
 
 
 .container{
-    padding:50px;
+    padding:80px;
 }
 
 
