--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
    }
    
 h1{
-   font-size: 60px;
+   font-size: 50px;
  }
 
 
@@ -26,19 +26,32 @@ h5, h4, h3, h2 {
 #logo {
     width: 300px;
     padding: 70px 10px 0px 70px;
-
 }
 
-.gallery{
-    display:table-cell;
-    vertical-align:middle;
-    display:inline-block;
 
+.gallery{
+    margin-right: 10px;
+    height: 400px;
+    width: 600px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    float: left;
+    max-width: 100%;
+}
+
+
+#photo1{
+    padding: 60px;
+    background-image: url("img/tim-1.jpg");
+}
+
+#photo2{
+    background-image: url("img/tim-2.jpg");
 }
 
 
 .container{
-    padding:80px;
+    padding:100px;
 }
 
 
@@ -47,7 +60,6 @@ h5, h4, h3, h2 {
     padding-top:10px ;
     display: inline-block;
     text-align: left;
-
 }
 
 .tabella {
@@ -56,7 +68,7 @@ h5, h4, h3, h2 {
     padding: 30px;
     caption-side : top;
     border-collapse: collapse;
-    }
+}
 
     tr:first-child {
         color: white;;
@@ -67,7 +79,7 @@ h5, h4, h3, h2 {
       }
    
 
-    .frame1 {
+.frame1 {
         
         width: 250px;
         height: 200px;
@@ -76,23 +88,23 @@ h5, h4, h3, h2 {
         padding: 10px;
         margin-bottom: 10px;
         margin-top: 10px;
-    }
+ }
 
   
-    .frame2 {
+.frame2 {
         width: 250px;
         height: 200px;
         background-image: url("img/graph.jpg");
         background-size: 100%;
         padding: 10px;
         margin-bottom: 10px;
-    }
+}
 
-    
-    footer{
+
+footer{
         padding-top: 25px;
         color:white;
         font-size: 25px;
-    }
+}
 
   
